# Design-Patterns

./: CMakeLists.txt  README.md
src/: main.cpp
src/01_组件协作模式/: 01_模板方法.cpp  02_策略模式.cpp  03_观察者模式.cpp
src/02_单一职责模式/: 01_装饰模式.cpp  02_桥模式.cpp
src/03_对象创建模式/: 01_工厂方法.cpp  02_抽象工厂.cpp  03_原型模式.cpp  04_构建器模式.cpp
src/04_对象性能模式/: 01_单例模式.cpp  02_享元模式.cpp  README.md
src/05_接口隔离模式/: 01_门面模式.cpp  02_代理模式.cpp  03_Adapter适配器模式.cpp  README.md
